Added Main Menu and another custom tank model by Iliya Surikov.

--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -11,6 +11,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/BattleGround.BattleGround
-GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+GameDefaultMap=/Game/Levels/BattleGround.BattleGround
 GlobalDefaultGameMode=/Game/StandartGameMode_BP.StandartGameMode_BP_C
 
